--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
 /* google font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
 
@@ -16,7 +8,7 @@
 }
 
 body {
-  background: #cccccc;
+  background: #f1f1f1;
   margin: 0;
   font-family: "Poppins";
 }
@@ -45,40 +37,80 @@ header a {
   margin: 0 auto;
 }
 
-/* html {
-  font-family: 'Nunito', sans-serif;
+/* homepage */
+.home {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 100px;
 }
 
-main {
-  padding: 1rem;
-  min-height: 100vh;
+.todo-details {
+  background: #fff;
+  border-radius: 4px;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 }
 
-article {
-  font-size: 1.2rem;
-  width: 90%;
-  margin: 1rem;
+.todo-details h4 {
+  margin: 0 0 10px 0;
+  font-size: 1.2em;
+  color: var(--primary);
 }
 
-button {
-  margin: 1rem 1rem 0.5rem;
-  font: inherit;
-  font-size: 2rem;
-  padding: 0.5em 1.5em;
+.todo-details p {
+  margin: 0;
+  font-size: 0.9em;
+  color: #555;
+}
+
+.todo-details span {
+  position: absolute;
+  top: 20px;
+  right: 20px;
   cursor: pointer;
-  border-radius: 0.5rem;
-}
-
-img {
-  width: 200px;
-  border: 0.5rem double #000;
+  background: #f1f1f1;
+  padding: 6px;
   border-radius: 50%;
-  margin: 0 1rem 1rem;
+  color: #333;
 }
 
-.column {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-} */
+/* new workout form */
+label,
+input {
+  display: block;
+}
+
+input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form button {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+
+input.error {
+  border: 1px solid var(--error);
+}
